// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-videoPlayer"
  id="video-player-without-text"
>
  <div
    className="css-1xdhyk6"
    data-testid="ds-componentWrapper"
    id="video-player-without-text-componentWrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
    <div
      className="css-1xdhyk6"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="video-player-without-text-helperErrorText"
    />
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-videoPlayer"
  id="video-player-with-text"
>
  <div
    className="css-1xdhyk6"
    data-testid="ds-componentWrapper"
    id="video-player-with-text-componentWrapper"
  >
    <h2
      className="chakra-heading css-1uhtpq1"
      data-testid="ds-heading"
      id="video-player-with-text-heading"
    >
      VideoPlayer Heading
    </h2>
    <p
      className="chakra-text css-ap6r8h"
      data-testid="ds-text"
    >
      VideoPlayer description
    </p>
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
    <div
      className="css-1xdhyk6"
      dangerouslySetInnerHTML={
        {
          "__html": "VideoPlayer helper test.",
        }
      }
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="video-player-with-text-helperErrorText"
    />
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-videoPlayer"
  id="video-player-with-text"
>
  <div
    className="css-1xdhyk6"
    data-testid="ds-componentWrapper"
    id="video-player-with-text-componentWrapper"
  >
    <h2
      className="chakra-heading css-1uhtpq1"
      data-testid="ds-heading"
      id="video-player-with-text-heading"
    >
      VideoPlayer Heading
    </h2>
    <p
      className="chakra-text css-ap6r8h"
      data-testid="ds-text"
    >
      VideoPlayer description
    </p>
    <div
      className="css-0"
    >
      <span
        dangerouslySetInnerHTML={
          {
            "__html": "<iframe title="Video player" src='https://player.vimeo.com/video/421404144?h=5467db7edd' width='640' height='360' frameborder='0' allow='autoplay; fullscreen; picture-in-picture' allowfullscreen></iframe>",
          }
        }
      />
    </div>
    <div
      className="css-1xdhyk6"
      dangerouslySetInnerHTML={
        {
          "__html": "VideoPlayer helper test.",
        }
      }
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="video-player-with-text-helperErrorText"
    />
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-videoPlayer"
  id="video-player-error"
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "<strong>Error:</strong> This video player has not been configured properly. Please contact the site administrator.",
      }
    }
  />
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 5`] = `
<div
  className="css-kle7zy"
  data-testid="ds-videoPlayer"
  id="chakra"
>
  <div
    className="css-1xdhyk6"
    data-testid="ds-componentWrapper"
    id="chakra-componentWrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
    <div
      className="css-1xdhyk6"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="chakra-helperErrorText"
    />
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props"
>
  <div
    className="css-1xdhyk6"
    data-testid="ds-componentWrapper"
    id="props-componentWrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
    <div
      className="css-1xdhyk6"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="props-helperErrorText"
    />
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;
